--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="theme-color" content="#ffffff" />
     <!-- Fonts -->
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
     <h1>
