--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grocery Mart</title>
+    <title>Sign Up | Grocery Mart</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
@@ -22,21 +22,19 @@
     <script src="./assets/js/scripts.js"></script>
   </head>
   <body>
-    <header id="header" class="header"></header>
+    <!-- Header -->
+    <header id="header"></header>
     <script>
       load("#header", "./templates/header.html");
     </script>
-    <div class="container">
-      <!-- Header -->
 
-      <!-- Main -->
-      <h1>Home page</h1>
+    <!-- Main -->
+    <h1>Sign up page</h1>
 
-      <!-- Footer -->
-      <footer id="footer"></footer>
-      <script>
-        load("#footer", "./templates/footer.html");
-      </script>
-    </div>
+    <!-- Footer -->
+    <footer id="footer"></footer>
+    <script>
+      load("#footer", "./templates/footer.html");
+    </script>
   </body>
 </html>
