--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
       load("#header", "./templates/header.html");
     </script>
     <div class="container">
-      <!-- Header -->
+      <!-- Slideshow -->
+      <div class="slideshow">
+        <div class="slideshow__inner">
+          <div class="slideshow__item">
+            <a href="#!" class="slideshow__link">
+              <picture>
+                <source media="(max-width: 767.98px)" srcset="./assets/imgs/slideshow/item-1-md.png" />
+                <img src="./assets/imgs/slideshow/item-1.png" alt="" class="slideshow__img" />
+              </picture>
+            </a>
+          </div>
+        </div>
+        <div class="slideshow__page">
+          <span class="slideshow__num">1</span>
+          <span class="slideshow__slider"></span>
+          <span class="slideshow__num">5</span>
+        </div>
+      </div>
 
       <!-- Main -->
       <h1>Home page</h1>
