--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,25 +26,177 @@
     <script>
       load("#header", "./templates/header.html");
     </script>
-    <div class="container">
+    <div class="container home">
       <!-- Slideshow -->
-      <div class="slideshow">
-        <div class="slideshow__inner">
-          <div class="slideshow__item">
-            <a href="#!" class="slideshow__link">
-              <picture>
-                <source media="(max-width: 767.98px)" srcset="./assets/imgs/slideshow/item-1-md.png" />
-                <img src="./assets/imgs/slideshow/item-1.png" alt="" class="slideshow__img" />
-              </picture>
+      <div class="home__container">
+        <div class="slideshow">
+          <div class="slideshow__inner">
+            <div class="slideshow__item">
+              <a href="#!" class="slideshow__link">
+                <picture>
+                  <source media="(max-width: 767.98px)" srcset="./assets/imgs/slideshow/item-1-md.png" />
+                  <img src="./assets/imgs/slideshow/item-1.png" alt="" class="slideshow__img" />
+                </picture>
+              </a>
+            </div>
+          </div>
+          <div class="slideshow__page">
+            <span class="slideshow__num">1</span>
+            <span class="slideshow__slider"></span>
+            <span class="slideshow__num">5</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Browse Categories -->
+      <section class="home__container">
+        <div class="home__row">
+          <h2 class="home__heading">Browse Categories</h2>
+        </div>
+        <div class="home__cate row row-cols-3 row-cols-md-1">
+          <div class="col">
+            <!-- Category Item 1 -->
+            <a href="#!">
+              <article class="cate-item">
+                <img src="./assets/imgs/category-item/item-1.png" alt="" class="cate-item__thumb" />
+                <div class="cate-item__info">
+                  <h3 class="cate-item__title">$24 - $150</h3>
+                  <p class="cate-item__desc">New sumatra mandeling coffe blend</p>
+                </div>
+              </article>
+            </a>
+          </div>
+          <div class="col">
+            <!-- Category Item 2 -->
+            <a href="#!">
+              <article class="cate-item">
+                <img src="./assets/imgs/category-item/item-2.png" alt="" class="cate-item__thumb" />
+                <div class="cate-item__info">
+                  <h3 class="cate-item__title">$37 - $160</h3>
+                  <p class="cate-item__desc">Espresso arabica and robusta beans</p>
+                </div>
+              </article>
+            </a>
+          </div>
+          <div class="col">
+            <!-- Category Item 3 -->
+            <a href="#!">
+              <article class="cate-item">
+                <img src="./assets/imgs/category-item/item-3.png" alt="" class="cate-item__thumb" />
+                <div class="cate-item__info">
+                  <h3 class="cate-item__title">$32 - $160</h3>
+                  <p class="cate-item__desc">Lavazza top class whole bean coffee blend</p>
+                </div>
+              </article>
             </a>
           </div>
         </div>
-        <div class="slideshow__page">
-          <span class="slideshow__num">1</span>
-          <span class="slideshow__slider"></span>
-          <span class="slideshow__num">5</span>
+      </section>
+
+      <!-- Browse Product -->
+      <section class="home__container">
+        <div class="home__row">
+          <h2 class="home__heading">Total LavAzza 1320</h2>
+          <button class="filter-btn">
+            Filter
+            <img src="./assets/icons/filter.svg" alt="" class="icon filter-btn__icon" />
+          </button>
         </div>
-      </div>
+        <div class="row row-cols-4 row-cols-lg-2 row-cols-sm-1 g-3">
+          <!-- Product card 1 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!">
+                  <img src="./assets/imgs/product/item-1.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn like-btn--liked product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">
+                <a href="#!">Coffee Beans - Espresso Arabica and Robusta Beans</a>
+              </h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$47.00</span>
+                <img src="./assets/icons/star.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">4.3</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 2 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!">
+                  <img src="./assets/imgs/product/item-2.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">
+                <a href="#!">Lavazza Coffee Blends - Try the Italian Espresso</a>
+              </h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$53.00</span>
+                <img src="./assets/icons/star.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">3.4</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 3 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!">
+                  <img src="./assets/imgs/product/item-3.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">
+                <a href="#!">Lavazza - Caffè Espresso Black Tin - Ground coffee</a>
+              </h3>
+              <p class="product-card__brand">welikecoffee</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$99.99</span>
+                <img src="./assets/icons/star.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">5.0</span>
+              </div>
+            </article>
+          </div>
+          <!-- Product card 4 -->
+          <div class="col">
+            <article class="product-card">
+              <div class="product-card__img-wrap">
+                <a href="#!">
+                  <img src="./assets/imgs/product/item-4.png" alt="" class="product-card__thumb" />
+                </a>
+                <button class="like-btn product-card__like-btn">
+                  <img src="./assets/icons/heart.svg" alt="" class="like-btn__icon icon" />
+                  <img src="./assets/icons/heart-red.svg" alt="" class="like-btn__icon--liked" />
+                </button>
+              </div>
+              <h3 class="product-card__title">
+                <a href="#!">Qualità Oro Mountain Grown - Espresso Coffee Beans</a>
+              </h3>
+              <p class="product-card__brand">Lavazza</p>
+              <div class="product-card__row">
+                <span class="product-card__price">$38.65</span>
+                <img src="./assets/icons/star.svg" alt="" class="product-card__star" />
+                <span class="product-card__score">4.4</span>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
 
       <!-- Main -->
       <h1>Home page</h1>
